test/classes/initializers/inheritance/inheritedInitWrongName.good
inheritedInitWrongName.chpl:20: error: unresolved call 'D.init(x=3, "hi", 4.6)'
inheritedInitWrongName.chpl:15: note: candidates are: D.init(a, b, c)
